--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "moment": "^2.17.1",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.4.1",
     "react-day-picker": "^3.1.1",
     "react-dom": "^15.3.2",
     "style-loader": "^0.13.1"
