--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-addons-css-transition-group": "^15.4.1",
     "react-day-picker": "^3.1.1",
     "react-dom": "^15.3.2",
-    "react-select": "^1.0.0-rc.2"
+    "react-select": "^1.0.0-rc.2",
+    "redux": "^3.6.0"
   }
 }
