--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "concurrently \"npm run dev\" \"npm run api\"",
     "api": "node simple_api/server.js",
     "dev": "webpack-dev-server --hot --inline",
+    "test": "mocha test/.setup.js test/**/*-test.js",
     "build": "webpack"
   },
   "repository": {
@@ -26,8 +27,13 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
     "concurrently": "^3.1.0",
     "css-loader": "^0.26.1",
+    "enzyme": "^2.6.0",
+    "jsdom": "^9.9.1",
+    "mocha": "^3.2.0",
+    "react-addons-test-utils": "^15.4.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
